syntax = "proto3";

package market_making;

option go_package = "github.com/fynnwu/FinancialTrading/go-api/market-making;market_making";

import "google/protobuf/timestamp.proto";

// MarketMakingService 提供做市策略管理服务
service MarketMakingService {
  // 设置做市策略
  rpc SetStrategy (SetStrategyRequest) returns (SetStrategyResponse);
  // 获取做市策略
  rpc GetStrategy (GetStrategyRequest) returns (GetStrategyResponse);
  // 获取做市绩效
  rpc GetPerformance (GetPerformanceRequest) returns (GetPerformanceResponse);
}

// 报价策略
message QuoteStrategy {
  string id = 1; // 唯一标识
  string symbol = 2; // 交易对符号
  double spread = 3; // 目标点差
  double min_order_size = 4; // 最小订单大小
  double max_order_size = 5; // 最大订单大小
  double max_position = 6; // 最大position
  string status = 7; // 状态
  google.protobuf.Timestamp created_at = 8; // 创建时间
  google.protobuf.Timestamp updated_at = 9; // 更新时间
}

// 做市绩效
message MarketMakingPerformance {
  string symbol = 1; // 交易对符号
  double total_pnl = 2; // 总数pnl
  double total_volume = 3; // 总数volume
  int32 total_trades = 4; // 总数trades
  double sharpe_ratio = 5; // 夏普比率
  google.protobuf.Timestamp start_time = 6; // 开始时间
  google.protobuf.Timestamp end_time = 7; // 结束时间
}

// 设置策略请求
message SetStrategyRequest {
  string symbol = 1; // 交易对符号
  double spread = 2; // 价差
  double min_order_size = 3; // 最小订单大小
  double max_order_size = 4; // 最大订单大小
  double max_position = 5; // 最大position
  string status = 6; // 状态
}

// 设置策略响应
message SetStrategyResponse {
  string strategy_id = 1; // 策略ID
}

// 获取策略请求
message GetStrategyRequest {
  string symbol = 1; // 交易对符号
}

// 获取策略响应
message GetStrategyResponse {
  QuoteStrategy strategy = 1; // 策略
}

// 获取绩效请求
message GetPerformanceRequest {
  string symbol = 1; // 交易对符号
  google.protobuf.Timestamp start_time = 2; // 开始时间
  google.protobuf.Timestamp end_time = 3; // 结束时间
}

// 获取绩效响应
message GetPerformanceResponse {
  MarketMakingPerformance performance = 1; // 表现
}
